--- a/app/src/main/res/layout/fragment_history_on_transaksi.xml
+++ b/app/src/main/res/layout/fragment_history_on_transaksi.xml
@@ -36,22 +36,19 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/htranson_recyclerViewFrag"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/xmin_padding">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        >
 
-    <com.github.ybq.android.spinkit.SpinKitView
-        android:id="@+id/progressBar"
-        style="@style/SpinKitView.FadingCircle"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/btn_lmedium_height"
-        android:layout_marginTop="@dimen/breadcrumb_height"
-        android:background="@android:color/transparent"
-        android:padding="@dimen/min_padding"
-        android:visibility="gone"
-        app:SpinKit_Color="@color/colorWhite" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/htranson_recyclerViewFrag"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/xmin_padding">
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
